# ATLAS-Server

./: .pre-commit-config.yaml  README.md  pyproject.toml
docs/: api.md
docs/database/: 01_schema.sql  02_types.sql  03_properties.sql
docs/database/04_testing_seed/: 01_property_rules.sql  02_containment_rules.sql  03_entities.sql
src/server/: __main__.py
src/server/api/: interface.py  types.py
src/server/backend/: handler.py  helper.py
src/server/data/: atlas.db
