[project]
name = "atlas-server"
version = "0.0.1"
description = "ATLAS-server"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "fastapi>=0.135.1",
    "uvicorn>=0.42.0",
    "vshc>=0.1.0",
]

[dependency-groups]
dev = [
    "pre-commit",
    "ruff",
    "mypy",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
server = "server.main:main"

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
